--- a/module1/main.css
+++ b/module1/main.css
@@ -6,6 +6,10 @@ body {
   height: 100vh;
 }
 
+body * {
+  box-sizing: border-box;
+}
+
 button {
   font-weight: 700;
   border-width: 2px;
@@ -69,11 +73,18 @@ button {
   margin-left: auto;
   margin-right: 16px;
 }
-.c-header > .ce-controls > .ce-search input{
+.c-header > .ce-controls > .ce-search input {
   width: 200px;
   padding: 8px;
   border-radius: 8px;
   border: 1px solid #0004;
+}
+.c-header > .ce-controls > .ce-message {
+  font-size: 0.9em;
+  text-transform: none;
+  color: #737373;
+  margin-right: 8px;
+  font-weight: 200;
 }
 
 .c-header .ce-controls > .ce-cart {
@@ -113,14 +124,6 @@ button {
   color: #fff;
 }
 
-.ce-body {
-  box-sizing: border-box;
-  height: calc(100% - 70px);
-  overflow: hidden;
-  background-color: #efefef;
-  display: flex;
-}
-
 .c-sidebar {
   background-color: white;
   margin-top: 1px;
@@ -146,14 +149,6 @@ button {
   text-decoration: none;
 }
 
-.ce-content {
-  width: calc(100% - 240px);
-  padding: 24px;
-  height: 100%;
-  overflow: auto;
-  box-sizing: border-box;
-}
-
 .c-product-banner {
   width: 100%;
   overflow: auto;
@@ -164,6 +159,7 @@ button {
   display: none;
 }
 .c-product-banner .ce-title {
+  box-sizing: border-box;
   width: 100%;
   margin: 0;
   padding: 0 8px;
@@ -192,10 +188,6 @@ button {
 .c-product-banner .ce-slider::-webkit-scrollbar {
   width: 100%;
   overflow: auto;
-}
-.ce-slider-wrapper {
-  width: fit-content;
-  display: flex;
 }
 
 .c-product {
@@ -232,4 +224,164 @@ button {
 
 .underline {
   text-decoration: underline;
+}
+
+.c-register-login-form {
+  width: 320px;
+  margin: auto;
+  text-align: left;
+}
+.c-register-login-form input[type="text"],
+.c-register-login-form input[type="password"],
+.c-register-login-form input[type="date"] {
+  border: 1px solid #0002;
+  margin: 4px 0 16px;
+  width: 100%;
+  height: 40px;
+  padding: 8px;
+}
+.c-register-login-form input[type="radio"] {
+  margin: 0 8px 0;
+}
+.c-register-login-form input[type="radio"] + label {
+  display: inline-block;
+  margin: 0 24px 16px 0;
+}
+.c-register-login-form input[type="submit"] {
+  border: none;
+  background-color: #2569d9;
+  color: #fff;
+  padding: 8px;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.c-register-login-form label {
+  color: #767676;
+  font-weight: 200;
+  font-size: 0.9em;
+}
+
+.c-product-details {
+  background-color: #fff;
+  height: 100%;
+  overflow-y: auto;
+  display: flex;
+}
+.c-product-details > .ce-thumbnail {
+  width: 30%;
+  padding: 40px;
+  text-align: center;
+}
+.c-product-details > .ce-info {
+  width: 70%;
+  padding: 40px;
+}
+.c-product-details > .ce-info > .ce-info-item {
+  margin-bottom: 16px;
+}
+.c-product-details > .ce-info > .ce-name {
+  font-size: 2em;
+  font-weight: 300;
+  letter-spacing: 1px;
+  margin: 16px 0 16px;
+  font-family: "Vidaloka";
+}
+.c-product-details > .ce-info > .ce-price {
+  font-size: 1.5em;
+  color: #ff7a80;
+}
+.c-product-details > .ce-info > .ce-price > .ce-discount > .ce-old-price {
+  font-size: 1rem;
+  color: #d1e1f0;
+  margin-top: 8px;
+  text-decoration: line-through;
+}
+.c-product-details > .ce-info > .ce-price > .ce-discount > .ce-discount-rate {
+  font-size: 1rem;
+  text-decoration: none;
+}
+.c-product-details > .ce-info > .ce-quantity {
+  margin-top: 40px;
+}
+.c-product-details > .ce-info > .ce-quantity > label{
+  font-weight: 200;
+}
+.c-product-details > .ce-info > .ce-quantity > input{
+  margin-top: 8px;
+  width: 80px;
+  height: 32px;
+  padding-left: 16px;
+  border: 1px solid #0003;
+  border-radius: 4px;
+}
+.c-product-details > .ce-info > .ce-controls > .ce-add-to-cart-btn {
+  border: none;
+  background-color: #2569d9;
+  color: #fff;
+}
+
+/* Page Style*/
+
+/* Page Style - Home */
+.p-home > .ce-body {
+  box-sizing: border-box;
+  height: calc(100% - 70px);
+  overflow: hidden;
+  background-color: #efefef;
+  display: flex;
+}
+.p-home > .ce-body .ce-content {
+  width: calc(100% - 240px);
+  padding: 24px;
+  height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
+}
+
+.p-home > .ce-body .ce-slider-wrapper {
+  width: fit-content;
+  display: flex;
+}
+
+/* Page Style - Register */
+.p-register > .ce-body {
+  box-sizing: border-box;
+  height: calc(100% - 70px);
+  overflow: auto;
+  text-align: center;
+  padding-bottom: 40px;
+  /* background-color: #efefef; */
+}
+.p-register > .ce-body .ce-content {
+  width: calc(100% - 240px);
+  padding: 24px;
+  height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
+}
+.p-register > .ce-body  > .ce-page-title {
+  font-weight: 200;
+  font-size: 1.8rem;
+  letter-spacing: 2px;
+}
+
+/* Page Style - Product Details */
+.p-product-details > .ce-body {
+  box-sizing: border-box;
+  height: calc(100% - 70px);
+  overflow: hidden;
+  background-color: #efefef;
+  display: flex;
+}
+
+.p-product-details > .ce-body .ce-content {
+  width: calc(100% - 240px);
+  padding: 24px;
+  height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
 }
