--- a/module1/main.css
+++ b/module1/main.css
@@ -6,6 +6,16 @@ body {
   height: 100vh;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin: 0
+}
+
+button,
+input[type="submit"],
+input[type="button"] {
+  cursor: pointer;
+}
+
 body * {
   box-sizing: border-box;
 }
@@ -30,6 +40,7 @@ button {
   display: flex;
   padding: 8px 24px;
   text-transform: uppercase;
+  height: 70px;
   /* border-bottom: 1px solid #0004; */
 }
 
@@ -87,12 +98,13 @@ button {
   font-weight: 200;
 }
 
-.c-header .ce-controls > .ce-cart {
+.c-header > .ce-controls > .ce-cart {
   position: relative;
   margin-left: auto;
   width: 40px;
   display: flex;
   margin-right: 16px;
+  cursor: pointer;
 }
 .c-header .ce-controls > .ce-cart > a >  .ce-cart-icon {
   width: 24px;
@@ -113,12 +125,12 @@ button {
   justify-content: center;
 }
 
-.c-header .ce-controls > .ce-register-btn {
+.c-header > .ce-controls > .ce-register-btn {
   margin-right: 8px;
   border: none;
 }
 
-.c-header .ce-controls > .ce-login-btn {
+.c-header > .ce-controls > .ce-login-btn {
   border: none;
   background-color: #2569d9;
   color: #fff;
@@ -258,7 +270,6 @@ button {
   text-transform: uppercase;
   font-weight: 600;
 }
-
 .c-register-login-form label {
   color: #767676;
   font-weight: 200;
@@ -322,8 +333,126 @@ button {
   border: none;
   background-color: #2569d9;
   color: #fff;
+  padding: 8px;
+  width: 200px;
+  height: 40px;
+  border-radius: 4px;
+  font-weight: 600;
+  margin-top: 16px;
 }
 
+.c-cart {
+  background-color: #fff;
+  width: 100%;
+  padding: 24px;
+}
+.c-cart > .ce-title {
+  font-weight: 400;
+  color: #fd5a5a;
+}
+.c-cart > .ce-cart-table {
+  margin-top: 40px;
+  border: 1px solid #0002;
+  width: 100%;
+  border-collapse: collapse;
+  text-align: left;
+}
+.c-cart > .ce-cart-table > thead > tr,
+.c-cart > .ce-cart-table > tbody > tr:not(:last-child) {
+  border-bottom: 1px solid #0002;
+}
+.c-cart > .ce-cart-table tr > th {
+  padding: 24px;
+}
+.c-cart > .ce-cart-table tr > td{
+  padding: 24px;
+}
+.c-cart > .ce-cart-table tr > td.ce-product-cell{
+  display: flex;
+  align-items: center;
+  font-size: 1.2em;
+  font-weight: 300;
+  letter-spacing: 1px;
+  margin: 16px 0 16px;
+  font-family: "Vidaloka";
+  cursor: pointer;
+}
+.c-cart > .ce-cart-table tr > td > .ce-delete-btn {
+  background: none;
+  border: none;
+  color: #ff0000;
+  font-size: 1.1em;
+  font-weight: 300;
+}
+.c-cart > .ce-cart-table tr > td > input {
+  width: 60px;
+  height: 32px;
+  padding: 0 8px;
+  border: 1px solid #0002;
+  border-radius: 4px;
+}
+.c-cart > .ce-cart-table tr > td > .ce-product-thumbnail {
+  width: 40px;
+  margin-right: 24px;
+}
+.c-cart > .ce-checkout-panel {
+  padding: 24px 0;
+  text-align: right;
+}
+.c-cart > .ce-checkout-panel > .ce-checkout-btn {
+  padding: 16px 32px;
+  background-color: #fd5a5a;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: 300;
+  font-size: 1em;
+}
+
+.c-payment {
+  background-color: #fff;
+  width: 100%;
+  padding: 24px;
+  min-height: 100%;
+}
+.c-payment > .ce-title {
+  color: #fd5a5a;
+  font-weight: 200;
+  font-size: 1.8rem;
+  letter-spacing: 2px;
+  margin-bottom: 24px;
+  text-align: center;
+}
+.c-payment > .ce-payment-form {
+  width: 320px;
+  margin: 24px auto 0 auto;
+  text-align: left;
+}
+.c-payment > .ce-payment-form input[type="text"],
+.c-payment > .ce-payment-form input[type="password"],
+.c-payment > .ce-payment-form input[type="date"] {
+  border: 1px solid #0002;
+  margin: 4px 0 16px;
+  width: 100%;
+  height: 40px;
+  padding: 8px;
+}
+.c-payment > .ce-payment-form input[type="submit"] {
+  border: none;
+  background-color: #2569d9;
+  color: #fff;
+  padding: 8px;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.c-payment > .ce-payment-form label {
+  color: #767676;
+  font-weight: 200;
+  font-size: 0.9em;
+}
 /* Page Style*/
 
 /* Page Style - Home */
@@ -347,8 +476,9 @@ button {
   display: flex;
 }
 
-/* Page Style - Register */
-.p-register > .ce-body {
+/* Page Style - Register/Login */
+.p-register > .ce-body,
+.p-login > .ce-body {
   box-sizing: border-box;
   height: calc(100% - 70px);
   overflow: auto;
@@ -356,17 +486,21 @@ button {
   padding-bottom: 40px;
   /* background-color: #efefef; */
 }
-.p-register > .ce-body .ce-content {
+.p-register > .ce-body .ce-content,
+.p-login > .ce-body .ce-content {
   width: calc(100% - 240px);
   padding: 24px;
   height: 100%;
   overflow: auto;
   box-sizing: border-box;
 }
-.p-register > .ce-body  > .ce-page-title {
+.p-register > .ce-body  > .ce-page-title,
+.p-login > .ce-body  > .ce-page-title {
   font-weight: 200;
   font-size: 1.8rem;
   letter-spacing: 2px;
+  margin-bottom: 24px;
+  color: #fd5a5a;
 }
 
 /* Page Style - Product Details */
@@ -378,7 +512,24 @@ button {
   display: flex;
 }
 
-.p-product-details > .ce-body .ce-content {
+.p-product-details > .ce-body > .ce-content {
+  width: calc(100% - 240px);
+  padding: 24px;
+  height: 100%;
+  overflow: auto;
+  box-sizing: border-box;
+}
+
+/* Page Style - Product Details */
+.p-shopping-cart > .ce-body {
+  box-sizing: border-box;
+  height: calc(100% - 70px);
+  overflow: hidden;
+  background-color: #efefef;
+  display: flex;
+}
+
+.p-shopping-cart > .ce-body > .ce-content{
   width: calc(100% - 240px);
   padding: 24px;
   height: 100%;
